<package>
<name>GIR_uart</name>
<version>0.0.0</version>
<description>The roborts_uart package</description>
<author>huangshulei</author>
<maintainer email="h1376071832@163.com">niuwengang</maintainer>
<license>GPL 3.0 </license>
<buildtool_depend>catkin</buildtool_depend>


<build_depend>roscpp</build_depend>
<run_depend>roscpp</run_depend>
<build_depend>roslib</build_depend>
<run_depend>roslib</run_depend>

<export/>
</package>
